Bug 129560 - Selection doesn't display on stretchy MathML characters; Bug 133429 - dynamically created MathML content sometimes doesn't layout as expected; Bug 133814 - Improper spacing of embellished operators; Patch for each bug attached to the bug. All have: r=dbaron, sr=attinasi, a=asa